tests/NormalTests/paczka1/fuzzy1/35935725.err
Error in line 2: lZUT1d8o A261 72,7
Error in line 17: lZUT1d8o S723 -1,6
Error in line 16: S848 S848 27,5
Error in line 19: zZSqtCFB S301 40,8
Error in line 13: ZOxxQf5FOMR S723 142,9
Error in line 25: ZOxxQf5FOMR A261 54,7
Error in line 33: V0hmV S30L 45,4
Error in line 22: S848 S301 29,0
Error in line 36: zZSqtCFB A261 75,3
Error in line 21: V0hmV A261 30,4
